# sqs-router

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test_handler.py
examples/: lambda_example.py
src/sqs_router/: __init__.py  exceptions.py  router.py  types.py
tests/: conftest.py  test_dispatch.py  test_router.py
